--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
