--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "classname": "0.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.0",
     "react-redux": "^9.1.1",
